// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow  Row should be clickable when showContributorAssignment set to true 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Mr Christopher Christoff
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              null
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  Row should not be clickable when showContributorAssignment set to false 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Mr Christopher Christoff
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              null
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders only name and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              A. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              A. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders reorder buttons, contributor assignment, and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Mr Christopher Christoff
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              null
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Move record up the order"
      >
        <WithStyles(IconButton)
          aria-label="Move record up the order"
          disabled={false}
          onClick={[Function]}
        >
          <pure(KeyboardArrowUpIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        title="Move record down the order"
      >
        <WithStyles(IconButton)
          aria-label="Move record down the order"
          disabled={false}
          onClick={[Function]}
        >
          <pure(KeyboardArrowDownIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set and set as selected 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": undefined,
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <Component />
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": undefined,
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <Component />
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set, contributor author details, and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <Component />
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and creator with creator role set and set as selected 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": undefined,
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Investigator
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow  a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": undefined,
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "margin": "0 1%",
        "width": "98%",
      }
    }
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Investigator
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <WithStyles(IconButton)
          aria-label="Remove this record"
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteIcon)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;
